Refactor Door100App.java